--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="pink_c">#ff9ff3</color>
+    <color name="yellow_c">#feca57</color>
+    <color name="red_c">#ee5253</color>
+    <color name="blued_c">#1e3799</color>
+    <color name="purple_c">#5f27cd</color>
+    <color name="white_c">#c8d6e5</color>
+    <color name="blue_c">#48dbfb</color>
+    <color name="green_c">#1dd1a1</color>
+    <color name="black_c">#222f3e</color>
 </resources>
